<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:focusableInTouchMode="true"
        android:paddingStart="@dimen/activity_auth_horizontal_padding"
        android:paddingEnd="@dimen/activity_auth_horizontal_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llLogin"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/auth_edit_text_bg"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                >

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="11dp"
                    android:src="@drawable/ic_mail"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:textColor="@color/auth_input_text"
                    android:textColorHint="@color/auth_input_hint"
                    android:hint="@string/login_email_hint"
                    android:background="@null"
                    android:paddingTop="13dp"
                    android:paddingBottom="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/auth_edit_text_bg"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="11dp"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textColor="@color/auth_input_text"
                    android:textColorHint="@color/auth_input_hint"
                    android:hint="@string/auth_password_hint"
                    android:background="@null"
                    android:paddingTop="13dp"
                    android:paddingBottom="16dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLogin"
                android:textSize="19sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@drawable/auth_login_button_bg"
                android:text="@string/auth_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="29dp"
                android:paddingTop="12dp"
                android:paddingBottom="15dp"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvForgot"
                android:textSize="16sp"
                android:textColor="@color/auth_input_hint"
                android:textStyle="bold"
                android:text="@string/auth_forgot"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>
        </LinearLayout>
</RelativeLayout>
    </ScrollView>