<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:focusableInTouchMode="true"
    android:paddingTop="@dimen/activity_auth_horizontal_padding"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llLogin"
        android:paddingStart="42.5dp"
        android:paddingEnd="39dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/auth_edit_text_bg"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_mail"
                android:id="@+id/ivIconEmail"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:textColor="@color/auth_input_text"
                android:textColorHint="@color/auth_input_hint"
                android:hint="@string/auth_email_hint"
                android:background="@null"
                android:paddingTop="13dp"
                android:layout_toEndOf="@id/ivIconEmail"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17.5sp"
                android:text="*"
                android:layout_alignParentRight="true"
                android:textColor="@color/star_in_register"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:fontFamily="@string/sans_serif_light"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/auth_edit_text_bg"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_name"
                android:id="@+id/ivIconName"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLogin"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/auth_input_text"
                android:textColorHint="@color/auth_input_hint"
                android:hint="@string/auth_name_hint"
                android:background="@null"
                android:paddingTop="13dp"
                android:layout_toEndOf="@id/ivIconName"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17.5sp"
                android:text="*"
                android:layout_alignParentRight="true"
                android:textColor="@color/star_in_register"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:fontFamily="@string/sans_serif_light"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/auth_edit_text_bg"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_lock"
                android:id="@+id/ivIconPassword"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/auth_input_text"
                android:textColorHint="@color/auth_input_hint"
                android:hint="@string/auth_password_hint"
                android:background="@null"
                android:paddingTop="13dp"
                android:paddingBottom="16dp"
                android:layout_toEndOf="@id/ivIconPassword"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17.5sp"
                android:text="*"
                android:layout_alignParentRight="true"
                android:textColor="@color/star_in_register"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:fontFamily="@string/sans_serif_light"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/auth_edit_text_bg"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_lock"
                android:layout_centerVertical="true"
                android:id="@+id/ivIconPasswordConfirm"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etPasswordConfirm"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/auth_input_text"
                android:textColorHint="@color/auth_input_hint"
                android:hint="@string/auth_password_confirm_hint"
                android:background="@null"
                android:paddingTop="13dp"
                android:paddingBottom="16dp"
                android:layout_toEndOf="@id/ivIconPasswordConfirm"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17.5sp"
                android:text="*"
                android:layout_alignParentRight="true"
                android:textColor="@color/star_in_register"
                android:paddingTop="3dp"
                android:paddingEnd="4dp"
                android:fontFamily="@string/sans_serif_light"/>
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogin"
            android:textSize="19sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/auth_login_button_bg"
            android:text="@string/auth_next"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="15dp"
            android:paddingStart="68dp"
            android:paddingEnd="72dp"/>

    </LinearLayout>
</ScrollView>